--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/BonnyRamsay/nodeTest#readme",
   "dependencies": {
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
     "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "mocha": "^4.1.0"
   }
 }
